--- a/main.html
+++ b/main.html
@@ -8,6 +8,19 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+
+	<form>
+    <label for="name">Name:</label><br>
+    <input type="text" id="name"><br>
+    <label for="email">Email:</label><br>
+    <input type="email" id="email"><br>
+    <label for="phone">Phone:</label><br>
+    <input type="number" id="phone"><br><br>
+    <button>Submit</button>
+
+
+</form>
+
     <script type="text/javascript" src="./script.js">
 </script>
 
