--- a/main.html
+++ b/main.html
@@ -8,14 +8,13 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-
-	<form>
-    <label for="name">Name:</label><br>
-    <input type="text" id="name"><br>
-    <label for="email">Email:</label><br>
-    <input type="email" id="email"><br>
-    <label for="phone">Phone:</label><br>
-    <input type="number" id="phone"><br><br>
+<form>
+    <label for="name" required>Name:</label><br>
+    <input type="text" id="name" required><br>
+    <label for="email" required>Email:</label><br>
+    <input type="email" id="email" required><br>
+    <label for="phone" required>Phone:</label><br>
+    <input type="number" id="phone" required><br><br>
     <button>Submit</button>
 
 
